Criação do projeto
Criação de alguns arquivos do projeto

--- a/Modelo/CosturaWEB/Costura/src/java/apoio/db.properties
+++ b/Modelo/CosturaWEB/Costura/src/java/apoio/db.properties
@@ -1,4 +1,4 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/cadastro
+db.url=jdbc:postgresql://localhost:5432/CosturaDB
 db.user=postgres
-db.senha=
+db.senha=postgres
