--- a/Bibliotecas/db.properties
+++ b/Bibliotecas/db.properties
@@ -1,4 +1,4 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/conteudos
+db.url=jdbc:postgresql://localhost:5432/costuradb
 db.user=postgres
-db.senha=
+db.senha=postgres
