Mudanças no gitignore
Alteração nas pastas a serem ignoradas pelo github

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-/Modelo/Costura/nbproject/private/
-/Modelo/CosturaWEB/Costura/build/
-/Modelo/CosturaWEB/Costura/dist/
-/CosturaWEB/Costura/dist/
+CosturaWEB/Costura/build/
+CosturaWEB/Costura/dist/
+CosturaWEB/Costura/nbproject/
+CosturaWEB/Costura/test/
+Projeto Costura/Costura/build/
+Projeto Costura/Costura/nbproject/
 *.class
+
