--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 CosturaWEB/Costura/build/
 CosturaWEB/Costura/dist/
+CosturaWEB/Costura/nbproject/
 CosturaWEB/Costura/test/
 Projeto Costura/Costura/build/
 Projeto Costura/Costura/nbproject/
