--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ CosturaWEB/Costura/nbproject/ant-deploy.xml
 CosturaWEB/Costura/nbproject/private/private.properties
 CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/nbproject/private/private.xml
+CosturaWEB/Costura/src/java/apoio/db.properties
