--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ CosturaWEB/Costura/nbproject/private/private.properties
 CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/nbproject/private/private.xml
 CosturaWEB/Costura/src/java/apoio/db.properties
+CosturaWEB/Costura/src/java/apoio/db.properties
+CosturaWEB/Costura/nbproject/private/private.properties
