--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ CosturaWEB/Costura/nbproject/private/private.xml
 CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/nbproject/private/private.properties
+CosturaWEB/Costura/nbproject/private/private.xml
