--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/nbproject/private/private.properties
 CosturaWEB/Costura/nbproject/private/private.xml
+CosturaWEB/Costura/nbproject/private/private.xml
