--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ CosturaWEB/Costura/src/java/apoio/db.properties
 CosturaWEB/Costura/nbproject/private/private.properties
 CosturaWEB/Costura/nbproject/private/private.xml
 CosturaWEB/Costura/nbproject/private/private.xml
+CosturaWEB/Costura/src/java/apoio/db.properties
