--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ CosturaWEB/Costura/nbproject/private/private.properties
 CosturaWEB/Costura/nbproject/private/private.xml
 CosturaWEB/Costura/nbproject/private/private.xml
 CosturaWEB/Costura/src/java/apoio/db.properties
+CosturaWEB/Costura/nbproject/private/private.properties
