--- a/CosturaWEB/Costura/nbproject/project.properties
+++ b/CosturaWEB/Costura/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.java-json.jar=lib\\java-json.jar
 file.reference.postgresql-9.4.1209.jar=lib\\postgresql-9.4.1209.jar
 file.reference.servlet-api.jar=lib\\servlet-api.jar
 includes=**
@@ -41,7 +42,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.4.1209.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.java-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
